Better strings for Bitzi lookup, showing magnet links, and copying magnets.  Also improved download error messages, and made the headers in title case.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -363,8 +363,8 @@ SEARCH_PUBLIC_LAUNCH_STRING=Launch Action
 SEARCH_PUBLIC_STOP_STRING=Stop Search
 SEARCH_PUBLIC_BROWSE_STRING=Browse Host
 SEARCH_PUBLIC_CHAT_STRING=Chat With Host
-SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Bitzi Web Lookup...
-SEARCH_PUBLIC_MAGNET_LOOKUP_STRING=Magnet Details for File
+SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Lookup File with Bitzi
+SEARCH_PUBLIC_MAGNET_LOOKUP_STRING=Show Magnet Details
 SEARCH_PUBLIC_HTTP_PAGE_STRING=Web page for file(s)
 SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Repeat Search
 SEARCH_PUBLIC_BLOCK_STRING=Block Host
@@ -407,8 +407,8 @@ SEARCH_BLOCK_HOST=Do you want to block search results from the host at
 ################################################################################
 # Magnet stuff
 ################################################################################
-MAGNET_COPY_MAGNET_LINKS_LABEL=Copy Magnet Links to Clipboard
-MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the Selected Files to the Clipboard
+MAGNET_COPY_MAGNET_LINKS_LABEL=Copy Magnet Link to Clipboard
+MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Link of the Selected File to the Clipboard
 
 ################################################################################
 # Search actions
@@ -534,31 +534,31 @@ DOWNLOAD_LOCATION_DIALOG_TITLE=Choose Save Location
 ################################################################################
 # Key/value pair for save location error states
 ################################################################################
-SAVE_LOCATION_ALREADY_EXISTS_SHORT_ERROR=File already exists
-SAVE_LOCATION_IS_ALREADY_DOWNLOADED_TO_SHORT_ERROR=Filename taken
-SAVE_LOCATION_ALREADY_SAVED_SHORT_ERROR=Download already finished
-SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_SHORT_ERROR=No write permission
-SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_SHORT_ERROR=Folder does not exist
-SAVE_LOCATION_NOT_A_DIRECOTRY_SHORT_ERROR=Not a folder
-SAVE_LOCATION_SECURITY_VIOLATION_SHORT_ERROR=Invalid filename
-SAVE_LOCATION_FILE_NOT_REGULAR_SHORT_ERROR=Not a file
-SAVE_LOCATION_FILESYSTEM_SHORT_ERROR=Filesystem error
-SAVE_LOCATION_ALREADY_DOWNLOADING_SHORT_ERROR=Same file already being downloaded
+SAVE_LOCATION_ALREADY_EXISTS_SHORT_ERROR=File Already Exists
+SAVE_LOCATION_IS_ALREADY_DOWNLOADED_TO_SHORT_ERROR=Filename Taken
+SAVE_LOCATION_ALREADY_SAVED_SHORT_ERROR=Download Already Finished
+SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_SHORT_ERROR=No Write Permission
+SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_SHORT_ERROR=Folder Does Not Exist
+SAVE_LOCATION_NOT_A_DIRECOTRY_SHORT_ERROR=Not a Folder
+SAVE_LOCATION_SECURITY_VIOLATION_SHORT_ERROR=Invalid Filename
+SAVE_LOCATION_FILE_NOT_REGULAR_SHORT_ERROR=Not a File
+SAVE_LOCATION_FILESYSTEM_SHORT_ERROR=Filesystem Error
+SAVE_LOCATION_ALREADY_DOWNLOADING_SHORT_ERROR=Same File Already Being Downloaded
 # {0} the full path name of the file
-SAVE_LOCATION_ALREADY_EXISTS_ERROR=Could not save download to {0}, the file already exists.
+SAVE_LOCATION_ALREADY_EXISTS_ERROR=A file already exists at {0}.
 # {0} the full path name of the file
-SAVE_LOCATION_IS_ALREADY_DOWNLOADED_TO_ERROR=Could not save download to {0}, another download is already downloading to that file.
+SAVE_LOCATION_IS_ALREADY_DOWNLOADED_TO_ERROR=Another download is already saving to {0}.
 SAVE_LOCATION_ALREADY_SAVED_ERROR=Could not set the file location, the download is already finished.
 # {0} the full path name of the folder
 SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_ERROR=Could not save download to the folder {0}, because you do not have write access to it.
 # {0} the full path name of the folder
-SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_ERROR=Could not save download to folder {0}, because it does not exist. 
+SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_ERROR=Could not save download to folder {0}, because the folder does not exist. 
 # {0} the full path name of the folder/file
-SAVE_LOCATION_NOT_A_DIRECOTRY_ERROR=Could not set download folder {0} because it denotes an already existing file.
+SAVE_LOCATION_NOT_A_DIRECOTRY_ERROR=Could not set download folder to {0}, because it represents an individual file, not a folder.
 # {0} the full path name of the file
-SAVE_LOCATION_SECURITY_VIOLATION_ERROR=Could not set file location, the filename {0} is invalid and may corrupt your system.
+SAVE_LOCATION_SECURITY_VIOLATION_ERROR=Could not set file location to {0}, because the filename is invalid and may corrupt your system.
 # {0} the full path name of the file
-SAVE_LOCATION_FILE_NOT_REGULAR_ERROR=Could not set file location because {0} is not a regular file.
+SAVE_LOCATION_FILE_NOT_REGULAR_ERROR=Could not set file location to {0}, because it is not a regular file.
 SAVE_LOCATION_FILESYSTEM_ERROR=Could not set file location due to an error in the filesystem.
 SAVE_LOCATION_ALREADY_DOWNLOADING_ERROR=The same file is already being downloaded.
 
