- Removed all Library actions from File menu. - Removed all tab listener / menu changing code. - Placed "Share New File..." and "Share New Folder..." actions in the LibraryTree's popup menu.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -202,9 +202,6 @@ MENU_FILE_CONNECT_ACCESSIBLE=Connect to the Network
 MENU_FILE_DISCONNECT=Disconnect
 MENU_FILE_DISCONNECT_MNEMONIC=I
 MENU_FILE_DISCONNECT_ACCESSIBLE=Disconnect from the Network
-MENU_FILE_LIBRARY_ADD_SHARED_FOLDER=Add Folder to Share...
-MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_MNEMONIC=A
-MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_ACCESSIBLE=Add a Folder that You Would Like to Share
 MENU_FILE_LIBRARY_NEW_FOLDER=New Folder
 MENU_FILE_LIBRARY_NEW_FOLDER_MNEMONIC=N
 MENU_FILE_LIBRARY_NEW_FOLDER_ACCESSIBLE=Add a Folder to the Selected Library Folder
@@ -577,9 +574,11 @@ DOWNLOADER_UTILS_ALREADY_IN_LIBRARY=Same File Already In Library
 ################################################################################
 SHARE_FILE_POPUP_MENU_LABEL=Share File
 UNSHARE_FILE_POPUP_MENU_LABEL=Stop Sharing File
-SHARE_FILE_ACTION_NAME=Share File...
+SHARE_FILE_ACTION_NAME=Share New File...
 SHARE_FILE_ACTION_APPROVE_LABEL=Share
 SHARE_FILE_ACTION_MNEMONIC=I
+SHARE_NEW_FOLDER_ACTION_NAME=Share New Folder...
+SHARE_NEW_FOLDER_ACTION_MNEMONIC=R
 
 ################################################################################
 # Key/value pairs for Statistics String...
