--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -618,9 +618,7 @@ DOWNLOAD_CHUNKS=Chunks
 DOWNLOAD_LOST=Lost To Corruption
 DOWNLOAD_SEARCHING=Locating Sources...
 DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
-DOWNLOAD_MAGNET_DIALOG=Would you like to download
-DOWNLOAD_FROM=from
-DOWNLOAD_MAGNET_DIALOG_END=?
+DOWNLOAD_MAGNET_DIALOG_MESSAGE=Would you like to start downloads from the following magnets?
 DOWNLOAD_HASH_ONLY_MAGNET=LimeWire will not be able to start the download you have selected unless you start a search for it.
 DOWNLOAD_PRIORITY_ACTIVE=Active
 DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Move the selected download closer to becoming active
