- Do not call PlaylistMediator.<anything> if player not shown - Added icon for "Individually Shared Files" tree node - Fixed bug with right-click on Library table background - Player option now notes about turning off playlist too

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1310,7 +1310,7 @@ OPTIONS_APPS_MAIN_TITLE=Helper Apps
 OPTIONS_BUGS_MAIN_TITLE=Bug Reports
 OPTIONS_GUI_MAIN_TITLE=View
 OPTIONS_POPUPS_MAIN_TITLE=Popups
-OPTIONS_AUTOCOMPLETE_MAIN_TITLE=Text Autocompletion
+OPTIONS_AUTOCOMPLETE_MAIN_TITLE=Autocompletion
 OPTIONS_THEME_MAIN_TITLE=Skin
 OPTIONS_SKIN_MAIN_TITLE=Skin
 OPTIONS_SEARCH_MAIN_TITLE=Searching
@@ -1514,9 +1514,9 @@ OPTIONS_CHAT_ACTIVE_LABEL=You can turn chat on or off.
 ################################################################################
 # Key/Value pairs for the player options in the options window
 ################################################################################
-OPTIONS_PLAYER_ACTIVE_CHECK_BOX_LABEL=Use LimeWire MP3 Player:
+OPTIONS_PLAYER_ACTIVE_CHECK_BOX_LABEL=Use LimeWire Media Player:
 OPTIONS_PLAYER_PREFERENCE_TITLE=Player Options
-OPTIONS_PLAYER_PREFERENCE_LABEL=You can use the internal player or your system default. A restart is required to enable/disable the player controls.
+OPTIONS_PLAYER_PREFERENCE_LABEL=You can choose to play media with LimeWire or your system's default player.  The media player and playlist will appear only if this option is set.  A restart will be required when enabling or disabling the media controls.
 
 ################################################################################
 # Key/Value pairs for the iTunes options in the options window
