Fix bug where shared folder was not being properly removed from sharing settings

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1374,7 +1374,7 @@ OPTIONS_SHARED_DIRS_BUTTON_LABEL=Add Folder...
 OPTIONS_SHARED_DIRS_BUTTON_TIP=Add a Folder to Share
 OPTIONS_SHARED_SPECIALLY_SHARE_BOX_LABEL=Share Finished Downloads:
 OPTIONS_SHARED_SHARE_SPECIALLY_TITLE=Download Sharing
-OPTIONS_SHARED_SHARE_SPECIALLY_LABEL=You can share files that you download to folders that are not shared.
+OPTIONS_SHARED_SHARE_SPECIALLY_LABEL=You can share files that you download to non-shared folders.
 
 ################################################################################
 # Key/value pairs for the shared extension options window item
