--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -416,6 +416,7 @@ MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the Selected Files to 
 ################################################################################
 # {0} the space separated list of keywords
 SEARCH_FOR_KEYWORDS_ACTION_NAME=Search for Keywords: {0}
+SEARCH_ACTION_NAME=Search for: {0}
 # {0} the already translated mediatype
 SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Search "What''s New" for: {0}
 # {0} the type of the search, e.g. Title, Album, Genre
