one tag that wasn't very clear to translate has been translated now

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -2376,7 +2376,7 @@ OPTIONS_SHARED_SPECIALLY_SHARE_BOX_LABEL=Compartir Descargas Finalizadas:
 #### OPTIONS_SHARED_SHARE_SPECIALLY_TITLE=Download Sharing
 OPTIONS_SHARED_SHARE_SPECIALLY_TITLE=Compartir Descargas
 #### OPTIONS_SHARED_SHARE_SPECIALLY_LABEL=You can share files that you download to folders that are not shared.
-#?OPTIONS_SHARED_SHARE_SPECIALLY_LABEL=
+#OPTIONS_SHARED_SHARE_SPECIALLY_LABEL=Puede compartir los archivos que descargue en carpetas no compartidas
 
 ################################################################################
 # Key/value pairs for the shared extension options window item
