Added warning message methods. Added isFirewalled() to FileDetails interface.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -410,6 +410,7 @@ SEARCH_BLOCK_HOST=Do you want to block search results from the host at
 ################################################################################
 MAGNET_COPY_MAGNET_LINKS_LABEL=Copy Magnet Links to Clipboard
 MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the Selected Files to the Clipboard
+MAGNET_COPY_MAGNET_LINKS_WARNING=One or more of the created magnet links may not be accessible since their hosts are firewalled.
 
 ################################################################################
 # Search actions
@@ -1027,6 +1028,7 @@ UPDATE_TIP=Visit http://www.limewire.com to update!
 ################################################################################
 MESSAGE_CAPTION=Message
 MESSAGE_ERROR_CAPTION=Error
+MESSAGE_WARNING_CAPTION=Warning
 MESSAGE_SHARE_SAVE_DIR=Would you like to add the save folder to your list of shared folders? Subfolders of this folder will also be shared.
 MESSAGE_CONFIRM_UNSHARE_DIRECTORY=Are you sure you want to stop sharing this folder?
 MESSAGE_CANNOT_UNSHARE_SUBDIRS=LimeWire cannot stop sharing subfolders of folders that are shared.
