--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -964,7 +964,7 @@ DOWNLOADER_UTILS_HASH_CONFLICT_QUESTION=Voulez-vous continuer le chargement malg
 #### DOWNLOADER_UTILS_HASH_CONFLICT_CONTINUE_LABEL=Continue
 DOWNLOADER_UTILS_HASH_CONFLICT_CONTINUE_LABEL=Continuer
 #### DOWNLOADER_UTILS_ALREADY_IN_LIBRARY=Same File Already In Library
-#? DOWNLOADER_UTILS_ALREADY_IN_LIBRARY=
+DOWNLOADER_UTILS_ALREADY_IN_LIBRARY=Fichier identique déjà présent dans la médiathèque
 
 ################################################################################
 # Key/value pair for sharing of files specially/individually
@@ -980,9 +980,9 @@ SHARE_FILE_ACTION_APPROVE_LABEL=Partager
 #### SHARE_FILE_ACTION_MNEMONIC=I
 SHARE_FILE_ACTION_MNEMONIC=P
 #### SHARE_NEW_FOLDER_ACTION_NAME=Share New Folder...
-#? SHARE_NEW_FOLDER_ACTION_NAME=
+SHARE_NEW_FOLDER_ACTION_NAME=Partager un nouveau dossier...
 #### SHARE_NEW_FOLDER_ACTION_MNEMONIC=R
-#? SHARE_NEW_FOLDER_ACTION_MNEMONIC=
+SHARE_NEW_FOLDER_ACTION_MNEMONIC=A
 
 ################################################################################
 # Key/value pairs for Statistics String...
@@ -1582,9 +1582,9 @@ XML_audios__audio__comments__=Commentaires
 #### XML_audios__audio__action__=Action
 XML_audios__audio__action__=Action
 #### XML_audios__audio__license__=Copyright
-#? XML_audios__audio__license__=
+XML_audios__audio__license__=Droits réservés
 #### XML_audios__audio__licensetype__=License Type
-#? XML_audios__audio__licensetype__=
+XML_audios__audio__licensetype__=Type de licence
 
 #### XML_videos__video=Video
 XML_videos__video=Vidéo
@@ -1601,7 +1601,7 @@ XML_videos__video__stars__=Vedettes
 #### XML_videos__video__type__=Type
 XML_videos__video__type__=Type
 #### XML_videos__video__length__=Length
-#? XML_videos__video__length__=
+XML_videos__video__length__=Durée
 #### XML_videos__video__year__=Year
 XML_videos__video__year__=Année
 #### XML_videos__video__language__=Language
@@ -1615,15 +1615,15 @@ XML_videos__video__comments__=Commentaires
 #### XML_videos__video__action__=Action
 XML_videos__video__action__=Action
 #### XML_videos__video__license__=Copyright
-#? XML_videos__video__license__=
+XML_videos__video__license__=Droits réservés
 #### XML_videos__video__licensetype__=License Type
-#? XML_videos__video__licensetype__=
+XML_videos__video__licensetype__=Type de licence
 #### XML_videos__video__height__= Height
-#? XML_videos__video__height__=
+XML_videos__video__height__=Hauteur
 #### XML_videos__video__width__=Width
-#? XML_videos__video__width__=
+XML_videos__video__width__=Largeur
 #### XML_videos__video__bitrate__=Bitrate
-#? XML_videos__video__bitrate__=
+XML_videos__video__bitrate__=Débit binaire
 
 #MetaEditorFrame
 #### META_EDITOR_ANNOTATING_FILE=Annotating file
@@ -2158,9 +2158,9 @@ ERROR_XML_SEARCH_TOO_LARGE=Votre recherche est trop spécifique. Veuillez supprim
 # Messages for Licensing
 ################################################################################
 #### LICENSE_VIEW_LICENSE=View License
-#? LICENSE_VIEW_LICENSE=
+LICENSE_VIEW_LICENSE=Consulter la licence
 #### LICENSE_VERIFY=Verify
-#? LICENSE_VERIFY=
+LICENSE_VERIFY=Vérifier
 
 ################################################################################
 # Messages for Creative Commons Licensing
@@ -2190,33 +2190,33 @@ LICENSE_CC=Creative Commons
 # Messages for Weed Licensing
 ################################################################################
 #### LICENSE_WEED_TITLE=Weedshare Details
-#? LICENSE_WEED_TITLE=
+LICENSE_WEED_TITLE=Détails Weedshare
 #### LICENSE_WEED_LOCATING=LimeWire is contacting www.weedshare.com for the details of this file.
-#? LICENSE_WEED_LOCATING=
+LICENSE_WEED_LOCATING=Limewire contacte www.weedshare.com pour obtenir les détails sur ce fichiers.
 #### LICENSE_WEED_UNVERIFIED=LimeWire has not yet verified this license.\nClick 'verify' to locate the details of this file.
-#? LICENSE_WEED_UNVERIFIED=
+LICENSE_WEED_UNVERIFIED=Limewire n'a pas encore vérifie cette licence.\nCliquez "Vérifier" pour rechercher les détails sur ce fichier.
 #### LICENSE_WEED_INVALID=LimeWire was unable to locate the details of this Weed file.
-#? LICENSE_WEED_INVALID=
+LICENSE_WEED_INVALID=LimeWire n'est pas parvenu à trouver les détails de ce fichier Weed.
 #### LICENSE_WEED_RETRY=You can try looking up the details again by clicking 'Verify'.
-#? LICENSE_WEED_RETRY=
+LICENSE_WEED_RETRY=Vous pouvez retenter de chercher les détails en cliquant "Vérifier".
 #### LICENSE_WEED_DETAILS=License Details:
-#? LICENSE_WEED_DETAILS=
+LICENSE_WEED_DETAILS=Détail de licence\u00a0:
 #### LICENSE_WEED_CLAIMED_DEED=View Weedshare Usage Rights
-#? LICENSE_WEED_CLAIMED_DEED=
+LICENSE_WEED_CLAIMED_DEED=Droits Weedshare d'utilisation
 #### LICENSE_WEED_DEED=View Usage Rights
-#? LICENSE_WEED_DEED=
+LICENSE_WEED_DEED=Droits d'utilisation
 #### LICENSE_WEED_VERIFICATION=View Verification Page
-#? LICENSE_WEED_VERIFICATION=
+LICENSE_WEED_VERIFICATION=Voir la page de vérification
 #### LICENSE_WEED=Weedshare
-#? LICENSE_WEED=
+LICENSE_WEED=Weedshare
 
 ################################################################################
 # Messages for Unknown licenses
 ################################################################################
 #### LICENSE_UNKNOWN_TITLE=License Details
-#? LICENSE_UNKNOWN_TITLE=
+LICENSE_UNKNOWN_TITLE=Détails de licence
 #### LICENSE_UNKNOWN_INVALID=This file may require a license in order to open and view.
-#? LICENSE_UNKNOWN_INVALID=
+LICENSE_UNKNOWN_INVALID=Une licence être peut-être nécessaire pour ouvrir et visualiser ce fichier.
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
