- Changed SaveDirPaneItem._mediator to _mtddMediator so that it is not so easily confused with SaveDirPaneItem.MEDIATOR. - Better description for media type save folder table.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1350,7 +1350,7 @@ OPTIONS_SAVE_DIR_BROWSE_BUTTON_LABEL=Browse...
 OPTIONS_SAVE_DIR_DEFAULT_BUTTON_LABEL=Use Default
 OPTIONS_SAVE_DIR_BROWSE_BUTTON_TIP=Choose Another Folder
 OPTIONS_SAVE_DIR_DEFAULT_BUTTON_TIP=Use the Default Folder
-OPTIONS_SAVE_MEDIATYPE_DIR_LABEL=Specify an optional download folder for each media type.
+OPTIONS_SAVE_MEDIATYPE_DIR_LABEL=You can specify a download location for each media type.
 OPTIONS_SAVE_MEDIATYPE_BROWSE_TIP=Open Dialog to Select a Folder
 OPTIONS_SAVE_RESET_BUTTON_LABEL=Reset
 OPTIONS_SAVE_RESET_BUTTON_TIP=Reset to Default Download Folder
