--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -417,6 +417,7 @@ MAGNET_COPY_MAGNET_LINKS_WARNING=One or more of the created magnet links may not
 ################################################################################
 # {0} the space separated list of keywords
 SEARCH_FOR_KEYWORDS_ACTION_NAME=Search for Keywords: {0}
+# {0} the title of the search
 SEARCH_ACTION_NAME=Search for: {0}
 # {0} the already translated mediatype
 SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Search "What''s New" for: {0}
