Change default filtering label on file chooser to be 'All Folders' rather than 'All Files'

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -527,6 +527,7 @@ DOWNLOADER_DIALOG_NOTE_LABEL=<b>Note</b>: A file with the same content already e
 # Key/value pair for download location dialog
 ################################################################################
 DOWNLOAD_LOCATION_DIALOG_TITLE=Choose Save Location
+DIRECTORY_CHOOSER_FILE_DESCRIPTION=All Folders
 
 ################################################################################
 # Key/value pair for save location error states
