--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1109,7 +1109,7 @@ MESSAGE_CAPTION=Message
 MESSAGE_ERROR_CAPTION=Error
 MESSAGE_SHARE_SAVE_DIR=Would you like to add the save folder to your list of shared folders? Subfolders of this folder will also be shared.
 MESSAGE_CONFIRM_UNSHARE_DIRECTORY=Are you sure you want to stop sharing this folder?
-MESSAGE_CANNOT_UNSHARE_SUBDIRS=LimeWire cannot stop sharing subfolders of folders that are shared.
+MESSAGE_CANNOT_UNSHARE_DIRECTORY=LimeWire cannot stop sharing this folder.
 MESSAGE_OVERWRITE_EXISTING_FILE=Overwrite existing file
 MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire will not launch the specified file for security reasons.
 MESSAGE_CONFIRM_FILE_DELETE=Are you sure you want to delete the selected file(s)?
