Commit to status-bar2-branch

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -591,7 +591,7 @@ STATISTICS_SHARING=Sharing
 STATISTICS_SHARING_TOOLTIP=The number of files you are sharing.
 STATISTICS_CONNECTION_DISCONNECTED=Disconnected
 STATISTICS_CONNECTION_DISCONNECTED_TIP=You are disconnected from the network. To connect, choose Connect from the File menu.
-STATISTICS_CONNECTION_CONNECTING=Connecting
+STATISTICS_CONNECTION_CONNECTING=Starting
 STATISTICS_CONNECTION_CONNECTING_TIP=You are currently connecting to the network.
 STATISTICS_CONNECTION_POOR=Poor
 STATISTICS_CONNECTION_POOR_TIP=You are connected to few hosts and have an unstable connection the network.
@@ -604,7 +604,7 @@ STATISTICS_CONNECTION_EXCELLENT_TIP=Your connection to the network is very stron
 STATISTICS_CONNECTION_TURBO_CHARGED=Turbo-Charged
 STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=You can experience Turbo-Charged connections all the time with LimeWire PRO.
 STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Your connection to the network is extremely strong.
-STATISTICS_CONNECTION_QUALITY=Quality:
+STATISTICS_CONNECTION_QUALITY=Connection:
 STATISTICS_CONNECTION_IDLE=Idle
 STATISTICS_CONNECTION_WAKING_UP=Waking Up
 STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode.
@@ -1304,6 +1304,7 @@ OPTIONS_SHUTDOWN_MAIN_TITLE=Shutdown
 OPTIONS_UPDATE_MAIN_TITLE=Updates
 OPTIONS_CHAT_MAIN_TITLE=Chat
 OPTIONS_PLAYER_MAIN_TITLE=Player
+OPTIONS_STATUS_BAR_MAIN_TITLE=Status Bar
 OPTIONS_ITUNES_MAIN_TITLE=iTunes
 OPTIONS_ITUNES_PREFERENCE_MAIN_TITLE=Importing
 OPTIONS_ITUNES_DAAP_MAIN_TITLE=Sharing
@@ -1518,6 +1519,19 @@ OPTIONS_CHAT_ACTIVE_LABEL=You can turn chat on or off.
 OPTIONS_PLAYER_ACTIVE_CHECK_BOX_LABEL=Use LimeWire Media Player:
 OPTIONS_PLAYER_PREFERENCE_TITLE=Player Options
 OPTIONS_PLAYER_PREFERENCE_LABEL=You can choose to play media with LimeWire or your system's default player.  The media player and playlist will appear only if this option is set.  A restart will be required when enabling or disabling the media controls.
+
+################################################################################
+# Key/Value pairs for the status bar options in the options window
+################################################################################
+OPTIONS_STATUS_BAR_FIREWALL_CHECK_BOX_LABEL=Show Firewall Indicator:
+OPTIONS_STATUS_BAR_FIREWALL_TITLE=Firewall Indicator
+OPTIONS_STATUS_BAR_FIREWALL_LABEL=You can display your firewall status in the status bar.
+OPTIONS_STATUS_BAR_CONNECTION_QUALITY_CHECK_BOX_LABEL=Show Connection Quality:
+OPTIONS_STATUS_BAR_CONNECTION_QUALITY_TITLE=Connection Quality
+OPTIONS_STATUS_BAR_CONNECTION_QUALITY_LABEL=You can display your connection quality in the status bar.
+OPTIONS_STATUS_BAR_SHARED_FILES_CHECK_BOX_LABEL=Show Shared Files:
+OPTIONS_STATUS_BAR_SHARED_FILES_TITLE=Shared Files
+OPTIONS_STATUS_BAR_SHARED_FILES_LABEL=You can display how many files you are sharing in the status bar.
 
 ################################################################################
 # Key/Value pairs for the iTunes options in the options window
