--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1102,6 +1102,13 @@ UPDATE_NOW_LABEL=Update Now
 UPDATE_TIP=Visit http://www.limewire.com to update!
 
 ################################################################################
+# Key/Value pairs for dropped files to share dialog
+################################################################################
+SHARED_FILES_DROP_DIALOG_TITLE=Share Dropped Files?
+SHARED_FILES_DROP_DIALOG_MESSAGE=You dropped the following files/folders on Limewire, would you like to share them?
+SHARED_FILES_DROP_DIALOG_ALWAYS_SHARE=Always Shared Dropped Files Without Asking
+
+################################################################################
 # Key/Value pairs for other messages displayed to the user
 ################################################################################
 MESSAGE_CAPTION=Message
