--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1376,6 +1376,7 @@ OPTIONS_SHARED_DIRS_BUTTON_TIP=Add a Folder to Share
 OPTIONS_SHARED_SPECIALLY_SHARE_BOX_LABEL=Share Finished Downloads:
 OPTIONS_SHARED_SHARE_SPECIALLY_TITLE=Download Sharing
 OPTIONS_SHARED_SHARE_SPECIALLY_LABEL=You can share files that you download to unshared folders.
+OPTIONS_SHARED_NEW_SAVE_FOLDERS=Would you like to share your new save folders?  The following new folders will be shared:\n\n
 
 ################################################################################
 # Key/value pairs for the shared extension options window item
