- Added right-click menu to status bar, allowing enabling and disabling of status bar components in place. - Added invert method to BooleanSetting, allowing an easy way to flip its value. - Added new status bar setting for bandwidth indicator. - Added new PaneItem for bandwidth indicator. - Simplified MediaPlayerComponent's layout.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -50,7 +50,7 @@ HAS_TIPS_OF_THE_DAY=false
 ################################################################################
 
 ################################################################################
-# Keys/value pairs for general strings that can be used in any components
+# Key/value pairs for general strings that can be used in any components
 ################################################################################
 GENERAL_OK_BUTTON_LABEL=OK
 GENERAL_OK_BUTTON_TIP=Apply Operation
@@ -69,7 +69,7 @@ GENERAL_BROWSE_HOST_LABEL=Browse Host
 GENERAL_BROWSE_HOST_TIP=View All Files on the Selected Computer
 
 ################################################################################
-# Keys/value pairs for right-click context menus.
+# Key/value pairs for right-click context menus.
 ################################################################################
 CONTEXT_MENU_UNDO=Undo
 CONTEXT_MENU_CUT=Cut
@@ -329,14 +329,23 @@ MENU_HELP_ERROR_MNEMONIC=E
 MENU_HELP_ERROR_ACCESSIBLE=Generate a Popup Error for Testing
 
 ################################################################################
-# Keys/value pairs for general tables info
+# Key/value pairs for status bar right-click menu
+################################################################################
+STATUS_BAR_SHOW_CONNECTION_QUALITY=Show Connection Quality
+STATUS_BAR_SHOW_SHARED_FILES_COUNT=Show Shared Files Count
+STATUS_BAR_SHOW_FIREWALL_STATUS=Show Firewall Status
+STATUS_BAR_SHOW_BANDWIDTH_CONSUMPTION=Show Bandwidth Consumption
+STATUS_BAR_SHOW_MEDIA_PLAYER=Show Media Player
+
+################################################################################
+# Key/value pairs for general tables info
 ################################################################################
 TABLES_USE_ROWSTRIPE=Stripe Rows
 TABLES_REAL_TIME_SORTING=Sort Automatically
 TABLES_DISPLAY_TOOLTIPS=Extended Tooltips
 
 ################################################################################
-# Keys/value pairs for SearchView stuff...
+# Key/value pairs for SearchView stuff...
 ################################################################################
 SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu. Your search may not return any results until you connect.
 SEARCH_STILL_CONNECTING=LimeWire is currently connecting to the network. Your search may not return many results until you are fully connected to the network.
@@ -1006,7 +1015,7 @@ LIST_EDITOR_REMOVE_BUTTON_TIP=Remove Selected Item
 INPUT_FIELD_GENERIC_CAPTION=Input
 
 ################################################################################
-# Keys/value pairs for general button labels/tooltips used in various windows
+# Key/value pairs for general button labels/tooltips used in various windows
 ################################################################################
 GENERAL_CHAT_BUTTON_LABEL=Chat...
 GENERAL_CHAT_BUTTON_TIP=Chat with Host
@@ -1015,7 +1024,7 @@ GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_CLEAR_HISTORY=Clear History
 
 ################################################################################
-# Keys/value pairs for ButtonRow labels and tooltips
+# Key/value pairs for ButtonRow labels and tooltips
 ################################################################################
 CHAT_BLOCK_BUTTON_LABEL=Block Host
 CHAT_SEND_BUTTON_LABEL=Send Message
@@ -1523,15 +1532,18 @@ OPTIONS_PLAYER_PREFERENCE_LABEL=You can choose to play media with LimeWire or yo
 ################################################################################
 # Key/Value pairs for the status bar options in the options window
 ################################################################################
+OPTIONS_STATUS_BAR_CONNECTION_QUALITY_CHECK_BOX_LABEL=Show Connection Quality Indicator:
+OPTIONS_STATUS_BAR_CONNECTION_QUALITY_TITLE=Connection Quality Indicator
+OPTIONS_STATUS_BAR_CONNECTION_QUALITY_LABEL=You can display your connection quality in the status bar.
+OPTIONS_STATUS_BAR_SHARED_FILES_CHECK_BOX_LABEL=Show Shared Files Indicator:
+OPTIONS_STATUS_BAR_SHARED_FILES_TITLE=Shared Files Indicator
+OPTIONS_STATUS_BAR_SHARED_FILES_LABEL=You can display how many files you are sharing in the status bar.
 OPTIONS_STATUS_BAR_FIREWALL_CHECK_BOX_LABEL=Show Firewall Indicator:
 OPTIONS_STATUS_BAR_FIREWALL_TITLE=Firewall Indicator
 OPTIONS_STATUS_BAR_FIREWALL_LABEL=You can display your firewall status in the status bar.
-OPTIONS_STATUS_BAR_CONNECTION_QUALITY_CHECK_BOX_LABEL=Show Connection Quality:
-OPTIONS_STATUS_BAR_CONNECTION_QUALITY_TITLE=Connection Quality
-OPTIONS_STATUS_BAR_CONNECTION_QUALITY_LABEL=You can display your connection quality in the status bar.
-OPTIONS_STATUS_BAR_SHARED_FILES_CHECK_BOX_LABEL=Show Shared Files:
-OPTIONS_STATUS_BAR_SHARED_FILES_TITLE=Shared Files
-OPTIONS_STATUS_BAR_SHARED_FILES_LABEL=You can display how many files you are sharing in the status bar.
+OPTIONS_STATUS_BAR_BANDWIDTH_CHECK_BOX_LABEL=Show Bandwidth Indicator:
+OPTIONS_STATUS_BAR_BANDWIDTH_TITLE=Bandwidth Indicator
+OPTIONS_STATUS_BAR_BANDWIDTH_LABEL=You can display your bandwidth consumption in the status bar.
 
 ################################################################################
 # Key/Value pairs for the iTunes options in the options window
