--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1106,7 +1106,7 @@ UPDATE_TIP=Visit http://www.limewire.com to update!
 ################################################################################
 SHARED_FILES_DROP_DIALOG_TITLE=Share Dropped Files?
 SHARED_FILES_DROP_DIALOG_MESSAGE=You dropped the following files/folders on Limewire, would you like to share them?
-SHARED_FILES_DROP_DIALOG_ALWAYS_SHARE=Always Shared Dropped Files Without Asking
+SHARED_FILES_DROP_DIALOG_ALWAYS_SHARE=Always Share Dropped Files Without Asking
 
 ################################################################################
 # Key/Value pairs for other messages displayed to the user
