- Fleshed out firewall indicator in status bar. - Added callback for firewall status changes.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -329,13 +329,16 @@ MENU_HELP_ERROR_MNEMONIC=E
 MENU_HELP_ERROR_ACCESSIBLE=Generate a Popup Error for Testing
 
 ################################################################################
-# Key/value pairs for status bar right-click menu
+# Key/value pairs for status bar components and right-click menu
 ################################################################################
 STATUS_BAR_SHOW_CONNECTION_QUALITY=Show Connection Quality
 STATUS_BAR_SHOW_SHARED_FILES_COUNT=Show Shared Files Count
 STATUS_BAR_SHOW_FIREWALL_STATUS=Show Firewall Status
 STATUS_BAR_SHOW_BANDWIDTH_CONSUMPTION=Show Bandwidth Consumption
 STATUS_BAR_SHOW_MEDIA_PLAYER=Show Media Player
+STATUS_BAR_FIREWALL_LABEL=Firewall:
+STATUS_BAR_FIREWALL_FOUND=Found
+STATUS_BAR_FIREWALL_NOT_FOUND=Not Found
 
 ################################################################################
 # Key/value pairs for general tables info
