- ToolTip for firewall status - Better ToolTip for # of files shared

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -339,6 +339,8 @@ STATUS_BAR_SHOW_MEDIA_PLAYER=Show Media Player
 STATUS_BAR_FIREWALL_LABEL=Firewall:
 STATUS_BAR_FIREWALL_FOUND=Found
 STATUS_BAR_FIREWALL_NOT_FOUND=Not Found
+STATUS_BAR_FIREWALL_FOUND_TOOLTIP=LimeWire has detected a firewall
+STATUS_BAR_FIREWALL_NOT_FOUND_TOOLTIP=LimeWire has not detected a firewall
 
 ################################################################################
 # Key/value pairs for general tables info
@@ -348,10 +350,10 @@ TABLES_REAL_TIME_SORTING=Sort Automatically
 TABLES_DISPLAY_TOOLTIPS=Extended Tooltips
 
 ################################################################################
-# Key/value pairs for SearchView stuff...
+# Key/value pairs for SearchView stuff
 ################################################################################
-SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu. Your search may not return any results until you connect.
-SEARCH_STILL_CONNECTING=LimeWire is currently connecting to the network. Your search may not return many results until you are fully connected to the network.
+SEARCH_NOT_CONNECTED=You are not connected to the network.  To connect, select "Connect" from the "File" menu.  Your search may not return any results until you connect.
+SEARCH_STILL_CONNECTING=LimeWire is currently connecting to the network.  Your search may not return many results until you are fully connected to the network.
 SEARCH_DOWNLOAD_BUTTON_LABEL=Download
 SEARCH_DOWNLOAD_BUTTON_TIP=Download All Selected Files
 SEARCH_DOWNLOAD_AS_LABEL=Download As...
@@ -381,7 +383,7 @@ SEARCH_RESULT_TABLE_LABEL=Results
 SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Search More
 SEARCH_SEARCHING_LABEL=Searching...
 SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
-SEARCH_VIRUS_MSG_TWO=program and could contain a virus. Are
+SEARCH_VIRUS_MSG_TWO=program and could contain a virus.  Are
 SEARCH_VIRUS_MSG_THREE=you sure you want to download it?
 SEARCH_SHOW_MESSAGE_MSG=Don't show this message again
 SEARCH_DOWNLOAD_DIALOG_CONFIRM=Download Request
@@ -452,7 +454,7 @@ RESULT_PANEL_VENDOR=Vendor
 RESULT_PANEL_ADDED=Created
 RESULT_PANEL_LICENSE=License
 
-#Filter labels.
+#Filter labels
 SEARCH_FILTER_ALL=All
 SEARCH_FILTER_OPTION=Option
 SEARCH_FILTER_OPTIONS=Options
@@ -507,7 +509,7 @@ PLAYLIST_DELETE_BUTTON_TIP=Remove Selected File from Playlist
 PLAYLIST_FILE_DESCRIPTION=Playlist Files (*.m3u)
 
 ################################################################################
-# Key/value pairs for the integrated media player...
+# Key/value pairs for the integrated media player
 ################################################################################
 MEDIA_PLAYER_DEFAULT_STRING=LimeWire Media Player
 MEDIA_PLAY_BUTTON_TIP=Play
@@ -600,26 +602,26 @@ STATISTICS_AVAILABLE=available
 STATISTICS_FILES=Files
 STATISTICS_DISCONNECTED=Disconnected / no files available
 STATISTICS_SHARING=Sharing
-STATISTICS_SHARING_TOOLTIP=The number of files you are sharing.
+STATISTICS_SHARING_TOOLTIP=The number of files you are sharing:
 STATISTICS_CONNECTION_DISCONNECTED=Disconnected
-STATISTICS_CONNECTION_DISCONNECTED_TIP=You are disconnected from the network. To connect, choose Connect from the File menu.
+STATISTICS_CONNECTION_DISCONNECTED_TIP=You are disconnected from the network.  To connect, choose Connect from the File menu.
 STATISTICS_CONNECTION_CONNECTING=Starting
-STATISTICS_CONNECTION_CONNECTING_TIP=You are currently connecting to the network.
+STATISTICS_CONNECTION_CONNECTING_TIP=You are currently connecting to the network
 STATISTICS_CONNECTION_POOR=Poor
-STATISTICS_CONNECTION_POOR_TIP=You are connected to few hosts and have an unstable connection the network.
+STATISTICS_CONNECTION_POOR_TIP=You are connected to few hosts and have an unstable connection the network
 STATISTICS_CONNECTION_FAIR=Fair
-STATISTICS_CONNECTION_FAIR_TIP=Your connection to the network is getting stronger.
+STATISTICS_CONNECTION_FAIR_TIP=Your connection to the network is getting stronger
 STATISTICS_CONNECTION_GOOD=Good
-STATISTICS_CONNECTION_GOOD_TIP=You are not yet fully connected to the network, but have a very good connection.
+STATISTICS_CONNECTION_GOOD_TIP=You are not yet fully connected to the network, but have a very good connection
 STATISTICS_CONNECTION_EXCELLENT=Excellent
-STATISTICS_CONNECTION_EXCELLENT_TIP=Your connection to the network is very strong.
+STATISTICS_CONNECTION_EXCELLENT_TIP=Your connection to the network is very strong
 STATISTICS_CONNECTION_TURBO_CHARGED=Turbo-Charged
-STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=You can experience Turbo-Charged connections all the time with LimeWire PRO.
-STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Your connection to the network is extremely strong.
+STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=You can experience Turbo-Charged connections all the time with LimeWire PRO!
+STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Your connection to the network is extremely strong
 STATISTICS_CONNECTION_QUALITY=Connection:
 STATISTICS_CONNECTION_IDLE=Idle
 STATISTICS_CONNECTION_WAKING_UP=Waking Up
-STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode.
+STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode
 
 ################################################################################
 # Key/value pairs for the download window, including labels for the
