More cleanups and small fixes.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -622,7 +622,7 @@ DOWNLOAD_LOST=Lost To Corruption
 DOWNLOAD_SEARCHING=Locating Sources...
 DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
 DOWNLOAD_MAGNET_DIALOG_MESSAGE=Would you like to start downloads from the following magnets?
-DOWNLOAD_HASH_ONLY_MAGNET=LimeWire will not be able to start the download you have selected unless you start a search for it.
+DOWNLOAD_HASH_ONLY_MAGNET=LimeWire may not be able to start the download you have selected unless you start a search for it.
 DOWNLOAD_PRIORITY_ACTIVE=Active
 DOWNLOAD_PRIORITY_UP_BUTTON_TIP=Move the selected download closer to becoming active
 DOWNLOAD_PRIORITY_DOWN_BUTTON_TIP=Move the selected download further from becoming active
