offload sharing & unsharing files/folders into the delayed GUI thread.  show a warning message if the sharing an individual file from the popup menu didn't work.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -580,6 +580,8 @@ SHARE_FILE_ACTION_APPROVE_LABEL=Share
 SHARE_FILE_ACTION_MNEMONIC=I
 SHARE_NEW_FOLDER_ACTION_NAME=Share New Folder...
 SHARE_NEW_FOLDER_ACTION_MNEMONIC=R
+SHARE_FILE_FAILED=LimeWire was unable to share the file "{0}".
+SHARE_FILE_ALREADY_SHARED=The file "{0}" is already shared.
 
 ################################################################################
 # Key/value pairs for Statistics String...
