- Internationalized bandwidth indicator - Cleaned up shared files tooltip a bit

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -600,9 +600,10 @@ SHARE_NEW_FOLDER_ACTION_MNEMONIC=R
 ################################################################################
 STATISTICS_AVAILABLE=available
 STATISTICS_FILES=Files
+STATISTICS_FILES_TOOLTIP=files
 STATISTICS_DISCONNECTED=Disconnected / no files available
 STATISTICS_SHARING=Sharing
-STATISTICS_SHARING_TOOLTIP=The number of files you are sharing:
+STATISTICS_SHARING_TOOLTIP=You are sharing
 STATISTICS_CONNECTION_DISCONNECTED=Disconnected
 STATISTICS_CONNECTION_DISCONNECTED_TIP=You are disconnected from the network.  To connect, choose Connect from the File menu.
 STATISTICS_CONNECTION_CONNECTING=Starting
@@ -1438,7 +1439,7 @@ OPTIONS_DOWNLOAD_MAX_NUMBER_LABEL=Maximum Downloads:
 ################################################################################
 OPTIONS_DOWNLOAD_CLEAR_TITLE=Clear Downloads
 OPTIONS_DOWNLOAD_CLEAR_LABEL=You can choose whether or not to automatically clear downloads that have completed.
-OPTIONS_DOWNLOAD_CLEAR_CHECK_BOX_LABEL=Auto-clear Completed Downloads:
+OPTIONS_DOWNLOAD_CLEAR_CHECK_BOX_LABEL=Auto-Clear Completed Downloads:
 
 ################################################################################
 # Key/Value pairs for the options for setting the bandwidth devoted
@@ -1549,6 +1550,8 @@ OPTIONS_STATUS_BAR_FIREWALL_LABEL=You can display your firewall status in the st
 OPTIONS_STATUS_BAR_BANDWIDTH_CHECK_BOX_LABEL=Show Bandwidth Indicator:
 OPTIONS_STATUS_BAR_BANDWIDTH_TITLE=Bandwidth Indicator
 OPTIONS_STATUS_BAR_BANDWIDTH_LABEL=You can display your bandwidth consumption in the status bar.
+OPTIONS_STATUS_BAR_BANDWIDTH_DOWNLOADS=Downloads:
+OPTIONS_STATUS_BAR_BANDWIDTH_UPLOADS=Uploads:
 
 ################################################################################
 # Key/Value pairs for the iTunes options in the options window
